force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <description>Records that will be created for working an issue related to a case.</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{00000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>