force-app/main/default/objects/Work_Item__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to an application record related to this work item</description>
    <label>Application Number</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>