force-app/main/default/objects/Work_Item__c/fields/Assigned_Investigator_INS__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Investigator_INS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Investigator to assign work item for escalation purposes.</inlineHelpText>
    <label>Assigned Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>