force-app/main/default/objects/Work_Item__c/fields/Assigned_Skill__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Skill__c</fullName>
    <description>Skill assigned to record for routing through omnichannel</description>
    <label>Assigned Skill</label>
    <length>50</length>
    <type>Text</type>
</CustomField>