force-app/main/default/objects/Work_Item__c/fields/Board_Program__c.field-meta.xml
<CustomField>
    <fullName>Board_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board / Program</label>
    <referenceTo>BoardProgram__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>