force-app/main/default/objects/Work_Item__c/fields/Comments_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Comments_Resolution__c</fullName>
    <description>This field is visible to the division staff but not visible to call agents</description>
    <inlineHelpText>This field is visible to the division staff but not visible to call agents</inlineHelpText>
    <label>Comments/Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>