force-app/main/default/objects/Work_Item__c/fields/Consumer_Issue__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Issue__c</fullName>
    <label>Type of Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>