force-app/main/default/objects/Work_Item__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>(5 * ( FLOOR( ( BLANKVALUE(DATEVALUE(Work_Item_Closed_Date__c), TODAY()) - DATE(1900, 1, 8) ) / 7 ) -
FLOOR( ( DATEVALUE(CreatedDate) - DATE(1900, 1, 8) ) / 7 ) ) +
MIN( 5, MOD( BLANKVALUE(DATEVALUE(Work_Item_Closed_Date__c), TODAY()) - DATE(1900, 1, 8), 7 ) ) -
MIN( 5, MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>