force-app/main/default/objects/Work_Item__c/fields/Escalate_Work_Item_to_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Work_Item_to_Investigator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this to escalate this work item to a specific investigator.</inlineHelpText>
    <label>Escalate Work Item to Investigator</label>
    <type>Checkbox</type>
</CustomField>