force-app/main/default/objects/Work_Item__c/fields/Form_Description_PVL__c.field-meta.xml
<CustomField>
    <fullName>Form_Description_PVL__c</fullName>
    <label>Form Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>