force-app/main/default/objects/Work_Item__c/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to set a Work Item as a High Priority item to be resolved with urgency.</description>
    <inlineHelpText>Select if this work item needs to be handled as a high priority.</inlineHelpText>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>