force-app/main/default/objects/Work_Item__c/fields/INS_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>INS_Case_Number__c</fullName>
    <description>INS Case Number for Licensing branch</description>
    <inlineHelpText>This is the Case Number created for an issue that the INS Licensing team is working with.</inlineHelpText>
    <label>INS Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>