force-app/main/default/objects/Work_Item__c/fields/INS_Time_Zone_for_Callback__c.field-meta.xml
<CustomField>
    <fullName>INS_Time_Zone_for_Callback__c</fullName>
    <inlineHelpText>Caller&apos;s time zone for callback purposes.</inlineHelpText>
    <label>INS Time Zone for Callback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii Standard Time</fullName>
            </value>
            <value>
                <fullName>Alaska Standard Time (+1)</fullName>
            </value>
            <value>
                <fullName>Pacific Standard Time (+2)</fullName>
            </value>
            <value>
                <fullName>Mountain Standard Time (+3)</fullName>
            </value>
            <value>
                <fullName>Central Standard Time (+4)</fullName>
            </value>
            <value>
                <fullName>Eastern Standard Time (+5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>