force-app/main/default/objects/Work_Item__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <description>Insurance carrier for RPA branch work items</description>
    <label>Insurance Carrier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>