force-app/main/default/objects/Work_Item__c/fields/Island_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Island_of_Residence__c</fullName>
    <label>Island</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Island</valueSetName>
    </valueSet>
</CustomField>