force-app/main/default/objects/Work_Item__c/fields/Last_4_Digits_of_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_of_Payment_Method__c</fullName>
    <label>Last 4 Digits of Payment Method</label>
    <length>4</length>
    <type>Text</type>
</CustomField>