force-app/main/default/objects/Work_Item__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License Number old</label>
    <length>30</length>
    <type>Text</type>
</CustomField>