force-app/main/default/objects/Work_Item__c/fields/License_Number_lu__c.field-meta.xml
<CustomField>
    <fullName>License_Number_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Number</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>