force-app/main/default/objects/Work_Item__c/fields/License_Stage__c.field-meta.xml
<CustomField>
    <fullName>License_Stage__c</fullName>
    <label>Respondent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applications Clerk</fullName>
            </value>
            <value>
                <fullName>Records Clerk</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
                <isActive>false</isActive>
                <label>Application</label>
            </value>
            <value>
                <fullName>Board Referral</fullName>
                <isActive>false</isActive>
                <label>Board Referral</label>
            </value>
            <value>
                <fullName>Licensed</fullName>
                <isActive>false</isActive>
                <label>Licensed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>