force-app/main/default/objects/Work_Item__c/fields/License_Type_PVL__c.field-meta.xml
<CustomField>
    <fullName>License_Type_PVL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LicenseType__c.BoardProgram__c</field>
            <operation>equals</operation>
            <valueField>$Source.Board_Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>