force-app/main/default/objects/Work_Item__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>Insurance line of business for RPA work items</description>
    <label>Line of Business</label>
    <length>30</length>
    <type>Text</type>
</CustomField>