force-app/main/default/objects/Work_Item__c/fields/OCP_Work_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>OCP_Work_Item_Type__c</fullName>
    <description>The types of work items for divisions</description>
    <label>Work Item Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord / Tenant Issue</fullName>
            </value>
            <value>
                <fullName>Inquiry on Existing Case</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>