force-app/main/default/objects/Work_Item__c/fields/Omni_Error_Message_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Omni_Error_Message_Hidden__c</fullName>
    <description>Error handling for tracking any omni flow errors</description>
    <label>Omni Error Message (Hidden)</label>
    <type>TextArea</type>
</CustomField>