force-app/main/default/objects/Work_Item__c/fields/Owner_calc__c.field-meta.xml
<CustomField>
    <fullName>Owner_calc__c</fullName>
    <formula>IF(
    ISBLANK( Owner:User.Id ),
    Owner:Queue.QueueName,
    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>