force-app/main/default/objects/Work_Item__c/fields/Public_Close_Note__c.field-meta.xml
<CustomField>
    <fullName>Public_Close_Note__c</fullName>
    <description>This field is populated when a work item is closed via action and is visible to the Call Center agents</description>
    <label>Interdepartmental Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>