force-app/main/default/objects/Work_Item__c/fields/PVL_Call_Category__c.field-meta.xml
<CustomField>
    <fullName>PVL_Call_Category__c</fullName>
    <description>Call categories for PVL Work Items</description>
    <label>PVL Call Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forms and Process</fullName>
            </value>
            <value>
                <fullName>Status Update</fullName>
            </value>
            <value>
                <fullName>Application Assistance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>