force-app/main/default/objects/Work_Item__c/fields/PVL_Work_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>PVL_Work_Item_Type__c</fullName>
    <description>The different types of PVL work items</description>
    <label>PVL Work Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund Status</fullName>
            </value>
            <value>
                <fullName>Payment Issues</fullName>
            </value>
            <value>
                <fullName>Status of Application</fullName>
            </value>
            <value>
                <fullName>Unable to Access Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>