force-app/main/default/objects/Work_Item__c/fields/Record_Created_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_Hidden__c</fullName>
    <formula>NOT(ISBLANK(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Created (Hidden)</label>
    <type>Checkbox</type>
</CustomField>