force-app/main/default/objects/Work_Item__c/fields/Return_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Return_Contact_Information__c</fullName>
    <description>Contact information for return call</description>
    <label>Return Contact Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>