force-app/main/default/objects/Work_Item__c/fields/Running_User_Flag_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Flag_Hidden__c</fullName>
    <formula>IF( OwnerId =  $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User Flag (Hidden)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>