force-app/main/default/objects/Work_Item__c/fields/Transfer_to_Branch__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Branch__c</fullName>
    <label>Transferred to Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Services</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>FS&amp;E</fullName>
            </value>
            <value>
                <fullName>Captives</fullName>
            </value>
            <value>
                <fullName>C&amp;E</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>P&amp;C</fullName>
            </value>
            <value>
                <fullName>LAH</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
                <isActive>false</isActive>
                <label>RPA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>