force-app/main/default/objects/Work_Item__c/fields/Transfer_to_Division__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Division__c</fullName>
    <label>Transferred to Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>