force-app/main/default/objects/Work_Item__c/fields/Transferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Date__c</fullName>
    <description>Date work item was transferred to another Division</description>
    <label>Transferred Date</label>
    <type>DateTime</type>
</CustomField>