force-app/main/default/objects/Work_Item__c/fields/Transferred_From_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred From Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Work Items (Transferred From Work Item)</relationshipLabel>
    <relationshipName>Work_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>