force-app/main/default/objects/Work_Item__c/fields/Transferred_From_Work_Item_calc__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From_Work_Item_calc__c</fullName>
    <formula>Transferred_From_Work_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred From Work Item</label>
    <type>Text</type>
</CustomField>