force-app/main/default/objects/Work_Item__c/fields/Transferred_to_User__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred to User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>