force-app/main/default/objects/Work_Item__c/fields/Transferred_to_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred to Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>