force-app/main/default/objects/Work_Item__c/fields/Type_of_Form_PVL__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Form_PVL__c</fullName>
    <label>Type of Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Restoration</fullName>
            </value>
            <value>
                <fullName>Inactivation</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Notice of Deficiencies</fullName>
            </value>
            <value>
                <fullName>Notice of Fees</fullName>
            </value>
            <value>
                <fullName>Notice of Licensures</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>