force-app/main/default/objects/Work_Item__c/fields/Voice_Call_Session__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call Session</label>
    <referenceTo>UJET__UJET_Session__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>