force-app/main/default/objects/Work_Item__c/fields/Work_Item_Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Caller_Type__c</fullName>
    <label>Work Item Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>