force-app/main/default/objects/Work_Item__c/fields/Work_Item_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Closed_Date__c</fullName>
    <label>Closed/Transferred Date</label>
    <type>DateTime</type>
</CustomField>