force-app/main/default/objects/Work_Item__c/recordTypes/INS.recordType-meta.xml
<RecordType>
    <fullName>INS</fullName>
    <active>true</active>
    <description>INS Work Item Records</description>
    <label>INS</label>
</RecordType>