force-app/main/default/objects/Work_Item__c/recordTypes/OCP.recordType-meta.xml
<RecordType>
    <fullName>OCP</fullName>
    <active>true</active>
    <description>OCP Work Item Records</description>
    <label>OCP</label>
</RecordType>