force-app/main/default/objects/Work_Item__c/recordTypes/PVL.recordType-meta.xml
<RecordType>
    <fullName>PVL</fullName>
    <active>true</active>
    <description>PVL Work Item Records</description>
    <label>PVL</label>
</RecordType>